--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/parkheeyeun/Todo-App.git",
+  "homepage": "https://parkheeyeun.github.io/Todo-App",
   "name": "todo-app",
   "version": "0.1.0",
   "private": true,
